--- a/src/apps/components/entities_area.html
+++ b/src/apps/components/entities_area.html
@@ -1,13 +1,28 @@
 <script>
-  const reject = (event, entity_string, label, paper_id) => {
-    alert(`Would reject ${entity_string} ${label} ${paper_id}`)
-    event.preventDefault()
-  }
 
-  const verify = (event, entity_string, label, paper_id) => {
-   alert(`Would verify ${entity_string} ${label} ${paper_id}`)
+  const verify = (event, reject) => {
+    const data = event.originalTarget.dataset
+    const formData = {
+      entity_id: data.entity_id,
+      paper_id: data.paper_id,
+      label: data.label,
+      species_id: data.species_id,
+      div_number: data.div_number,
+      rejected: reject
+    }
+    fetch(`${data.api_url}/api/verify/`,{
+      method: 'POST',
+      mode: 'no-cors',
+      headers:  {'Content-Type': 'application/json'},
+      body: JSON.stringify(formData)
+     }).then((resp) => {
+       // Should update calling button's appearence/disable?
+       event.originalTarget.setAttribute('disabled', 'disabled')
+     }).catch((error) => {
+       console.log(`Error`, error)
+     })
    event.preventDefault()
-  }
+ }
 </script>
 <div style="font-family: 'IBM Plex Sans',sans-serif;">
 {{ content }}
